--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "dependencies": {
     "express": "3.4.6",
-    "pg": "3.0.3"
+    "pg": "3.0.3",
+    "db-migrate": "0.6.4"
   }
 }
 
