--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "name": "transitr-server",
   "version": "0.0.1",
   "dependencies": {
+    "async": "0.8.0",
     "express": "3.4.6",
     "pg": "3.0.3",
     "db-migrate": "0.6.4"
